# AsterixRecorder

./: AsterixRecorder.cpp  AsterixRecorder.h  AsterixRecorder.qrc  AsterixRecorder.sln  AsterixRecorder.ui  AsterixRecorder.vcxproj  AsterixRecorder.vcxproj.filters  CMakeLists.txt  README.md  Recording001.asx  Recording002.asx  UDPListener.cpp  UDPListener.h  appveyor.yml  main.cpp
GeneratedFiles/: qrc_AsterixRecorder.cpp  ui_AsterixRecorder.h
